--- a/src/main/resources/templates/function.html
+++ b/src/main/resources/templates/function.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:text="${title}"/>
+    <title> Мейн сайта</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <html lang="en">
@@ -52,25 +52,13 @@
         <link href="pricing.css" rel="stylesheet">
     </head>
     <div class="container py-3">
+        <header th:insert="blocks/header :: header"> </header>
 
-        <header th:insert="blocks/header :: header"></header>
-
-
-        <main th:insert="blocks/main :: main" ;></main>
+        <div class="container mt-5">
+            <h1>Функции</h1></div>
 
         <div th:insert="blocks/footer :: footer"></div>
     </div>
-<body>
+    </html>
 
-<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-    <symbol id="check" viewBox="0 0 16 16">
-        <title>Check</title>
-        <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"></path>
-    </symbol>
-</svg>
-
-</body>
-</div>
 </html>
-</html>
-</head>
