--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -5,6 +5,7 @@
                 <img class="mb-2" src="/docs/5.1/assets/brand/bootstrap-logo.svg" alt="" width="24" height="19">
                 <small class="d-block mb-3 text-muted">©2021</small>
             </div>
-            <div class="col-6 col-md">
+            <div class="col-6 col-md"></div>
+        </div>
     </footer>
 </div>
