--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -45,9 +45,6 @@
         }
       }
 
-
-
-
         </style>
         <!-- Custom styles for this template -->
         <link href="pricing.css" rel="stylesheet">
@@ -56,9 +53,9 @@
         <header th:insert="blocks/header :: header"></header>
 
         <div class="container mt-5">
-            <h1>Главный блок сайта</h1></div>
 
-        <div th:insert="blocks/footer :: footer"></div>
+            <div th:insert="blocks/footer :: footer"></div>
+        </div>
     </div>
     </html>
 
