--- a/src/main/resources/templates/blocks/login.html
+++ b/src/main/resources/templates/blocks/login.html
@@ -1,17 +1,17 @@
 <div th:fragment="login">
     <form action="/login" method="post">
         <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Email address</label>
-            <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            <label for="exampleInputDay" class="form-label">day</label>
+            <input type="date" name="date" class="form-control" id="exampleInputDay" aria-describedby="dayHelp">
+            <div id="dayHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
         <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Password</label>
-            <input type="password" name="password" class="form-control" id="exampleInputPassword1">
+            <label for="exampleInputDay" class="form-label">day</label>
+            <input type="datetime-local" name="value" class="form-control" id="exampleInputValue"
+                   aria-describedby="dayHelp">
+            <div id="valueHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
-        <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
+        <div> &nbsp</div>
         <button type="submit" class="btn btn-primary">Submit</button>
-    </form></div>
+    </form>
+</div>
