--- a/src/main/resources/templates/clinic.html
+++ b/src/main/resources/templates/clinic.html
@@ -59,7 +59,7 @@
 <!--        <p th:text="${el.time}"></p>-->
 <!--        <a th:href="'/users/' + ${el.id}">Детальнее</a>-->
 <!--      </div>-->
-      <div th:insert="blocks/login :: login"></div>
+      <div th:insert="blocks/clinic :: clinic"></div>
       <div th:insert="blocks/footer :: footer"></div>
     </div>
   </div>
