--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -14,7 +14,7 @@
             <a class="me-3 py-2 text-dark text-decoration-none" href="/">Главная</a>
             <a class="me-3 py-2 text-dark text-decoration-none" href="/price">Цены</a>
             <a class="me-3 py-2 text-dark text-decoration-none" href="/function">Функции</a>
-            <a class="me-3 py-2 text-dark text-decoration-none" href="/login">Вход</a>
+            <a class="me-3 py-2 text-dark text-decoration-none" href="/clinic">Клиника</a>
             <a class="py-2 text-dark text-decoration-none" href="/about">О нас</a>
 
         </nav>
