--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,52 +15,43 @@
 
         <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/pricing/">
 
-        <!-- Bootstrap core CSS -->
-        <link href="/docs/5.1/dist/css/bootstrap.min.css" rel="stylesheet"
-              integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-              crossorigin="anonymous">
 
-        <!-- Favicons -->
-        <link rel="apple-touch-icon" href="/docs/5.1/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-        <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-        <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-        <link rel="manifest" href="/docs/5.1/assets/img/favicons/manifest.json">
-        <link rel="mask-icon" href="/docs/5.1/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
-        <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon.ico">
         <meta name="theme-color" content="#7952b3">
 
 
         <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
+            .bd-placeholder-img {
+                font-size: 1.125rem;
+                text-anchor: middle;
+                -webkit-user-select: none;
+                -moz-user-select: none;
+                user-select: none;
+            }
 
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
+            @media (min-width: 768px) {
+                .bd-placeholder-img-lg {
+                    font-size: 3.5rem;
+                }
+            }
 
         </style>
         <!-- Custom styles for this template -->
-        <link href="pricing.css" rel="stylesheet">
+
     </head>
     <div class="container py-3">
         <header th:insert="blocks/header :: header"></header>
         <div class="container mt-5">
-            <div th:each="el: ${date}" class="alert alert-info mt-2">
-                <h3 th:text="${el.time}"></h3>
-                <p th:text="${el.date}"></p>
+            <div th:each="el: ${date}" class="alert alert-info mt-2" style="align-content: center; color: #1d47a2">
+                <h3 style="text-align: center" th:text="${el.clientFullName}"></h3>
+                <p style="text-align: center" th:text="${el.date}"></p>
+                <p style="text-align: center" th:text="${el.time}"></p>
+                <p style="text-align: center" th:text="${el.personFio}"></p>
             </div>
-        <div class="container mt-5">
+            <div class="container mt-5">
 
-            <div th:insert="blocks/footer :: footer"></div>
+                <div th:insert="blocks/footer :: footer"></div>
+            </div>
         </div>
-    </div>
     </html>
 
 </html>
