--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -1,18 +1,37 @@
-<!DOCTYPE html>
-<html>
-<head>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="utf-8">-->
+<!--    <title></title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<p>Это обычный HTML документ</p>-->
+<!--<form action="/test" method="post">-->
+<!--    <label id="timelabel" style="text-align: right; width:109px">Time </label>-->
+<!--    <select name="time" id="time" style="height: 25px; width: 160px; color: black">-->
+<!--        <option value="9.00"> 9.00</option>-->
+<!--        <option value="10.00"> 10.00</option>-->
+<!--        <option value="11.00"> 11.00</option>-->
+<!--        <option value="12.00"> 12.00</option>-->
+<!--        <option value="13.00"> 13.00</option>-->
+<!--        <option value="14.00"> 14.00</option>-->
+<!--        <option value="15.00"> 15.00</option>-->
+<!--        <option value="16.00"> 16.00</option>-->
+<!--        <option value="17.00"> 17.00</option>-->
+<!--        <option value="18.00"> 18.00</option>-->
+<!--        <option value="19.00"> 19.00</option>-->
+<!--        <option value="20.00"> 20.00</option>-->
+<!--        <option value="21.00"> 21.00</option>-->
+<!--    </select>-->
 
-    <script>
-    function myFunction() {
-    document.getElementById("demo").innerHTML = "Привет, javascript!";
-    }
-</script>
+<!--    <label id="datelabel" style="text-align: right; width:109px">Date </label>-->
+<!--    <input name="date" type="text" id="date">-->
 
-</head>
-<body>
+<!--    <div> &nbsp</div>-->
+<!--    <button type="submit" class="btn btn-primary">Submit</button>-->
+<!--</form>-->
 
-<p id="demo">Привет, мир!</p>
-<button type="button" onclick="myFunction()">Кликни меня</button>
+<!--<p>Выходим обратно в HTML</p>-->
+<!--</body>-->
+<!--</html>-->
 
-</body>
-</html>
