--- a/src/main/resources/templates/blocks/clinic.html
+++ b/src/main/resources/templates/blocks/clinic.html
@@ -38,7 +38,7 @@
             <option value="Олександров Олександр Олександрович"> Олександров Олександр Олександрович</option>
 
         </select>
-        <div id="personHelp" class="form-text">Выберите мастера</div>
+        <div id="personHelp" class="form-text">Выберите врача</div>
         <div> &nbsp</div>
         <button type="submit" class="btn btn-primary">Записаться</button>
     </form>
