--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -1,37 +1,52 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-<!--    <meta charset="utf-8">-->
-<!--    <title></title>-->
-<!--</head>-->
-<!--<body>-->
-<!--<p>Это обычный HTML документ</p>-->
-<!--<form action="/test" method="post">-->
-<!--    <label id="timelabel" style="text-align: right; width:109px">Time </label>-->
-<!--    <select name="time" id="time" style="height: 25px; width: 160px; color: black">-->
-<!--        <option value="9.00"> 9.00</option>-->
-<!--        <option value="10.00"> 10.00</option>-->
-<!--        <option value="11.00"> 11.00</option>-->
-<!--        <option value="12.00"> 12.00</option>-->
-<!--        <option value="13.00"> 13.00</option>-->
-<!--        <option value="14.00"> 14.00</option>-->
-<!--        <option value="15.00"> 15.00</option>-->
-<!--        <option value="16.00"> 16.00</option>-->
-<!--        <option value="17.00"> 17.00</option>-->
-<!--        <option value="18.00"> 18.00</option>-->
-<!--        <option value="19.00"> 19.00</option>-->
-<!--        <option value="20.00"> 20.00</option>-->
-<!--        <option value="21.00"> 21.00</option>-->
-<!--    </select>-->
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title> Мейн сайта</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+        <meta name="generator" content="Hugo 0.88.1">
+        <title>Pricing example · Bootstrap v5.1</title>
 
-<!--    <label id="datelabel" style="text-align: right; width:109px">Date </label>-->
-<!--    <input name="date" type="text" id="date">-->
+        <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/pricing/">
 
-<!--    <div> &nbsp</div>-->
-<!--    <button type="submit" class="btn btn-primary">Submit</button>-->
-<!--</form>-->
 
-<!--<p>Выходим обратно в HTML</p>-->
-<!--</body>-->
-<!--</html>-->
+        <meta name="theme-color" content="#7952b3">
 
+
+        <style>
+            .bd-placeholder-img {
+                font-size: 1.125rem;
+                text-anchor: middle;
+                -webkit-user-select: none;
+                -moz-user-select: none;
+                user-select: none;
+            }
+
+            @media (min-width: 768px) {
+                .bd-placeholder-img-lg {
+                    font-size: 3.5rem;
+                }
+            }
+
+        </style>
+        <!-- Custom styles for this template -->
+
+    </head>
+    <div class="container py-3">
+        <header th:insert="blocks/header :: header"></header>
+        <div class="container mt-5">
+           <p>У₴БИЩЕ ВРЕМЯ ЗАНЯТО</p>
+            <div class="container mt-5">
+
+                <div th:insert="blocks/footer :: footer"></div>
+            </div>
+        </div>
+    </html>
+
+</html>
