--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -15,7 +15,9 @@
             <a class="me-3 py-2 text-dark text-decoration-none" href="/price">Цены</a>
             <a class="me-3 py-2 text-dark text-decoration-none" href="/function">Функции</a>
             <a class="me-3 py-2 text-dark text-decoration-none" href="/clinic">Клиника</a>
+            <a class="me-3 py-2 text-dark text-decoration-none" href="/registration">Регистрация</a>
             <a class="py-2 text-dark text-decoration-none" href="/about">О нас</a>
+
 
         </nav>
     </div>
