--- a/src/main/resources/templates/registration-login-error.html
+++ b/src/main/resources/templates/registration-login-error.html
@@ -34,19 +34,17 @@
                 }
             }
 
+
         </style>
         <!-- Custom styles for this template -->
 
     </head>
     <div class="container py-3">
         <header th:insert="blocks/header :: header"></header>
-        <div class="container mt-5">
-           <p>У₴БИЩЕ ВРЕМЯ ЗАНЯТО</p>
-            <div class="container mt-5">
+        <h3>Такой логин уже существует</h3>
+        <div th:insert="blocks/footer :: footer"></div>
 
-                <div th:insert="blocks/footer :: footer"></div>
-            </div>
-        </div>
+    </div>
     </html>
 
 </html>
