--- a/src/main/webapp/WEB-INF/templates/blocks/login.html
+++ b/src/main/webapp/WEB-INF/templates/blocks/login.html
@@ -1,13 +1,13 @@
 <div th:fragment="login">
     <form action="/login" method="post">
         <div>
-            <input type="text" name="login" aria-label="login" placeholder="login" class="form-control">
+            <input type="text" name="username" aria-label="login" placeholder="login" class="form-control">
         </div>
         <div>
             <input type="password" name="password" aria-label="password" placeholder="password"
                    class="form-control">
         </div>
         <div> &nbsp</div>
-        <button type="submit" class="btn btn-primary">Записаться</button>
+        <button type="submit" class="btn btn-primary"> Войти </button>
     </form>
 </div>
