--- a/src/main/webapp/WEB-INF/templates/error.html
+++ b/src/main/webapp/WEB-INF/templates/error.html
@@ -1,7 +1,11 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+    <!DOCTYPE html>
+<html lang="en">
 <head>
-    <title> Мейн сайта</title>
+    <meta charset="UTF-8">
+    <title><!DOCTYPE HTML>
+        <html xmlns:th="http://www.thymeleaf.org">
+        <head>
+        <title> Мейн сайта</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <html lang="en">
@@ -34,17 +38,22 @@
                 }
             }
 
-
         </style>
         <!-- Custom styles for this template -->
 
     </head>
     <div class="container py-3">
         <header th:insert="blocks/header :: header"></header>
-        <h3>Такой логин уже существует</h3>
-        <div th:insert="blocks/footer :: footer"></div>
+<h3>ERROR</h3>
 
+        <div th:insert="blocks/footer :: footer"></div>
+    </div>
     </div>
     </html>
 
+</html></title>
+</head>
+<body>
+
+</body>
 </html>
