last commit with autentification

--- a/src/main/webapp/WEB-INF/templates/blocks/registration.html
+++ b/src/main/webapp/WEB-INF/templates/blocks/registration.html
@@ -2,7 +2,7 @@
     <form action="/registration" method="post">
         <h2>Регистрация</h2>
         <div>
-            <input type="text" name="username" aria-label="login" placeholder="Username" class="form-control">
+            <input type="email" name="username" aria-label="login" placeholder="Email" class="form-control">
         </div>
 
         <div>
