--- a/src/main/webapp/WEB-INF/templates/usernameAlready.html
+++ b/src/main/webapp/WEB-INF/templates/usernameAlready.html
@@ -1,14 +1,19 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="auth">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title> Мейн сайта</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <html lang="en">
+
     <div class="container py-3">
+
         <header th:insert="blocks/header :: header"></header>
-        <header th:insert="blocks/registration :: registration"></header>
+
+       <div>Пользователь уже сущетсвует</div>
+
         <div th:insert="blocks/footer :: footer"></div>
+
     </div>
     </html>
 
