--- a/src/main/webapp/WEB-INF/templates/blocks/header.html
+++ b/src/main/webapp/WEB-INF/templates/blocks/header.html
@@ -1,4 +1,5 @@
 <div th:fragment="header" xmlns:sec="http://www.w3.org/1999/xhtml">
+
     <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="me-2" viewBox="0 0 118 94"
@@ -14,9 +15,12 @@
 
 
             <a class="me-3 py-2 text-dark text-decoration-none" href="/">Главная</a>
-            <a sec:authorize="isAuthenticated()" class="me-3 py-2 text-dark text-decoration-none" href="/price">Цены</a>
-            <a sec:authorize="isAuthenticated()" class="me-3 py-2 text-dark text-decoration-none" href="/function">Функции</a>
-            <a sec:authorize="isAuthenticated()" class="me-3 py-2 text-dark text-decoration-none"
+            <a sec:authorize="hasRole('USER')" class="me-3 py-2 text-dark text-decoration-none" href="/price">Цены</a>
+            <a sec:authorize="hasRole('USER')" class="me-3 py-2 text-dark text-decoration-none" href="/profile">Мой профиль</a>
+            <a sec:authorize="hasRole('DOCTOR1')" class="me-3 py-2 text-dark text-decoration-none" href="/doctor1">Меню доктора</a>
+            <a sec:authorize="hasRole('DOCTOR1')" class="me-3 py-2 text-dark text-decoration-none" href="/doctor1/patientmenu">Меню пациентов</a>
+            <a sec:authorize="hasRole('ADMIN')" class="me-3 py-2 text-dark text-decoration-none" href="/function">Функции</a>
+            <a sec:authorize="hasRole('USER')" class="me-3 py-2 text-dark text-decoration-none"
                href="/clinic">Клиника</a>
             <a sec:authorize="hasRole('ADMIN')" class="me-3 py-2 text-dark text-decoration-none"
                href="/admin">Админка</a>
@@ -24,7 +28,8 @@
             <a sec:authorize="!isAuthenticated()" class="me-3 py-2 text-dark text-decoration-none" href="/registration">Регистрация</a>
             <a sec:authorize="!isAuthenticated()" class="me-3 py-2 text-dark text-decoration-none" href="/login">Авторизация</a>
             &nbsp
-            <a sec:authorize="isAuthenticated()"> &nbsp <a sec:authorize="isAuthenticated()" sec:authentication="name">&nbsp &nbsp;
+            <a sec:authorize="isAuthenticated()"> &nbsp <a sec:authorize="isAuthenticated()" sec:authentication="name">&nbsp
+                &nbsp;
                 &nbsp &nbsp</a>
                 &nbsp
                 <form sec:authorize="isAuthenticated()" th:action="@{/logout}" method="post">
