Delete Student (homework)

--- a/src/main/resources/templates/blocks/clinic.html
+++ b/src/main/resources/templates/blocks/clinic.html
@@ -4,7 +4,7 @@
         <div class="mb-3">
             <label id="clientlabel" style="text-align: center; width:350px"> &nbsp; </label>
 
-            <div sec:authorize="isAuthenticated()" name="username">text</div>
+            <div sec:authorize="isAuthenticated()" name="username"></div>
             <input type="text" name="client" class="form-control" id="exampleInputClient"
                    style="text-align: center; width:350px" aria-describedby="clientHelp">
             <div id="clientHelp" class="form-text">Выберите свои данные (ФИО)</div>
