--- a/src/main/resources/templates/doctor1/patient.html
+++ b/src/main/resources/templates/doctor1/patient.html
@@ -21,7 +21,7 @@
         <p style="text-align: center" th:text="${el.finishDate}"></p>
         <p style="text-align: center" th:text="${el.diagnosis}"></p>
         <p style="text-align: center" th:text="${el.email}"></p>
-        <p style="text-align: center" th:text="${el.IDdoctor}"></p>
+        <p style="text-align: center" th:text="${el.doctor}"></p>
       </div>
     </div>
     <form action="/doctor1/patientmenu" method="post">
