--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
                 <h3 style="text-align: center" th:text="${el.clientFullName}"></h3>
                 <p style="text-align: center" th:text="${el.date}"></p>
                 <p style="text-align: center" th:text="${el.time}"></p>
-                <p style="text-align: center" th:text="${el.personFio}"></p>
+                <p style="text-align: center" th:text="${el.getDoctorFIO}"></p>
             </div>
         </div>
 
