--- a/src/main/resources/templates/doctor1/patientmenu.html
+++ b/src/main/resources/templates/doctor1/patientmenu.html
@@ -11,16 +11,19 @@
         <div class="container mt-5">
             <div th:each="el: ${patientCard}" sec:authorize="hasRole('DOCTOR1')" class="alert alert-info mt-2"
                  style="align-content: center; color: #1d47a2">
-                <h3 style="text-align: center" th:text="${el.fio}"></h3>
-                <p style="text-align: center" th:text="${el.sex}"></p>
-                <p style="text-align: center" th:text="${el.birthday}"></p>
-                <p style="text-align: center" th:text="${el.placeOfResidence}"></p>
-                <p style="text-align: center" th:text="${el.insurancePolicy}"></p>
-                <p style="text-align: center" th:text="${el.startDate}"></p>
-                <p style="text-align: center" th:text="${el.finishDate}"></p>
-                <p style="text-align: center" th:text="${el.diagnosis}"></p>
-                <p style="text-align: center" th:text="${el.email}"></p>
-                <p style="text-align: center" th:text="${el.IDdoctor}"></p>
+
+                <h6 style="text-align: center">ID</h6> <h5 style="text-align: center" th:text="${el.id}"></h5>
+                <h6 style="text-align: center">ФИО</h6> <h5 style="text-align: center" th:text="${el.fio}"></h5>
+                <h6 style="text-align: center">___________________________________</h6>
+                <h6 style="text-align: center">ПОЛ</h6> <h5 style="text-align: center" th:text="${el.sex}"></h5>
+                <h6 style="text-align: center">Дата рождения</h6> <h5 style="text-align: center" th:text="${el.birthday}"></h5>
+                <h6 style="text-align: center">Место проживания</h6> <h5 style="text-align: center" th:text="${el.placeOfResidence}"></h5>
+                <h6 style="text-align: center">Страховой полис </h6><h5 style="text-align: center" th:text="${el.insurancePolicy}"></h5>
+                <h6 style="text-align: center">Начало лечения</h6> <h5 style="text-align: center" th:text="${el.startDate}"></h5>
+                <h6 style="text-align: center">Следующий прием</h6> <h5 style="text-align: center" th:text="${el.finishDate}"></h5>
+                <h6 style="text-align: center">ДИАГНОЗ</h6> <h5 style="text-align: center" th:text="${el.diagnosis}"></h5>
+                <h6 style="text-align: center">Email</h6> <h5 style="text-align: center" th:text="${el.email}"></h5>
+                <h6 style="text-align: center">Лечащий врач</h6> <h5 style="text-align: center" th:text="${el.doctor}"></h5>
             </div>
         </div>
         <div class="container mt-5">
