--- a/src/main/resources/templates/doctor1/patient.html
+++ b/src/main/resources/templates/doctor1/patient.html
@@ -9,7 +9,7 @@
     <header th:insert="blocks/header :: header"></header>
 
     <div class="container mt-5">
-      <div th:each="el: ${patientCard}" sec:authorize="hasRole('DOCTOR1')" class="alert alert-info mt-2"
+      <div th:each="el: ${patient}" sec:authorize="hasRole('DOCTOR1')" class="alert alert-info mt-2"
            style="align-content: center; color: #1d47a2">
         <h3 style="text-align: center" th:text="${el.id}"></h3>
         <h3 style="text-align: center" th:text="${el.fio}"></h3>
