--- a/src/main/resources/templates/blocks/profile.html
+++ b/src/main/resources/templates/blocks/profile.html
@@ -3,7 +3,7 @@
 
 
     <div class="container mt-5">
-        <div th:each="el: ${patientCard}" class="alert alert-info mt-2 "
+        <div th:each="el: ${patient}" class="alert alert-info mt-2 "
              style="align-content: center; color: #1d47a2">
             <h3 style="text-align: center" th:text="${el.fio}"></h3>
             <p style="text-align: center" th:text="${el.email}"></p>
