--- a/src/main/resources/templates/blocks/clinic.html
+++ b/src/main/resources/templates/blocks/clinic.html
@@ -26,17 +26,14 @@
             <option value="16.00"> 16.00</option>
             <option value="17.00"> 17.00</option>
             <option value="18.00"> 18.00</option>
-            <option value="19.00"> 19.00</option>
-            <option value="20.00"> 20.00</option>
-            <option value="21.00"> 21.00</option>
         </select>
         <div id="timeHelp" class="form-text">Выберите время записи</div>
         <div>&nbsp;</div>
-        <select name="doctorFio" id="doctorFio" style="text-align: center; height: 25px; width: 350px; color: black">
-            <option value="Иванов Иван Иванович"> Иванов Иван Иванович</option>
-            <option value="Петров Петр Петрович"> Петров Петр Петрович</option>
-            <option value="Дмитриев Дмитрий Дмитриевич"> Дмитриев Дмитрий Дмитриевич</option>
-            <option value="Олександров Олександр Олександрович"> Олександров Олександр Олександрович</option>
+        <select name="doctorID" id="doctorID" style="text-align: center; height: 25px; width: 350px; color: black">
+            <option value="1"> Терапевт </option>
+            <option value="2"> Хирург </option>
+            <option value="3"> Окулист </option>
+            <option value="4"> Психолог </option>
 
         </select>
         <div id="personHelp" class="form-text">Выберите врача</div>
