--- a/src/main/resources/templates/blocks/adminNAV.html
+++ b/src/main/resources/templates/blocks/adminNAV.html
@@ -12,7 +12,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a href="#" style="background: #9e487f" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">будущий функционал</a>
+                            <a href="admin/newdoctor" style="background: #9e487f" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Добавить доктора</a>
                         </li>
                         &nbsp;
                         <li class="nav-item">
