add student for homework

--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -15,7 +15,7 @@
 
 
             <a class="me-3 py-2 text-dark text-decoration-none" href="/">Главная</a>
-            <a sec:authorize="hasRole('USER')" class="me-3 py-2 text-dark text-decoration-none" href="/price">Цены</a>
+            <a sec:authorize="hasRole('USER')" class="me-3 py-2 text-dark text-decoration-none" href="/student">Студент ( Домашка )</a>
             <a sec:authorize="hasRole('USER')" class="me-3 py-2 text-dark text-decoration-none" href="/profile">Мой профиль</a>
             <a sec:authorize="hasRole('DOCTOR1')" class="me-3 py-2 text-dark text-decoration-none" href="/doctor1">Меню доктора</a>
             <a sec:authorize="hasRole('DOCTOR1')" class="me-3 py-2 text-dark text-decoration-none" href="/doctor1/patientmenu">Меню пациентов</a>
