--- a/src/main/resources/templates/doctor1/patient.html
+++ b/src/main/resources/templates/doctor1/patient.html
@@ -1,51 +1,42 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="auth">
 <head>
-  <title> Мейн сайта</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-  <html lang="en">
-  <div class="container py-3">
-    <header th:insert="blocks/header :: header"></header>
+    <title> Мейн сайта</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <html lang="en">
+    <div class="container py-3">
+        <header th:insert="blocks/header :: header"></header>
 
-    <div class="container mt-5">
-      <div th:each="el: ${patient}" sec:authorize="hasRole('DOCTOR1')" class="alert alert-info mt-2"
-           style="align-content: center; color: #1d47a2">
-        <h3 style="text-align: center" th:text="${el.id}"></h3>
-        <h3 style="text-align: center" th:text="${el.fio}"></h3>
-        <p style="text-align: center" th:text="${el.sex}"></p>
-        <p style="text-align: center" th:text="${el.birthday}"></p>
-        <p style="text-align: center" th:text="${el.placeOfResidence}"></p>
-        <p style="text-align: center" th:text="${el.insurancePolicy}"></p>
-        <p style="text-align: center" th:text="${el.startDate}"></p>
-        <p style="text-align: center" th:text="${el.finishDate}"></p>
-        <p style="text-align: center" th:text="${el.diagnosis}"></p>
-        <p style="text-align: center" th:text="${el.email}"></p>
-        <p style="text-align: center" th:text="${el.doctor}"></p>
-      </div>
+        <div class="container mt-5">
+            <div th:each="el: ${patient}" sec:authorize="hasRole('DOCTOR1')" class="alert alert-info mt-2"
+                 style="align-content: center; color: #1d47a2">
+                <h3 style="text-align: center" th:text="${el.client_id}"></h3>
+                <h3 style="text-align: center" th:text="${el.fio}"></h3>
+                <p style="text-align: center" th:text="${el.sex}"></p>
+                <p style="text-align: center" th:text="${el.birthday}"></p>
+                <p style="text-align: center" th:text="${el.placeOfResidence}"></p>
+                <p style="text-align: center" th:text="${el.insurancePolicy}"></p>
+                <p style="text-align: center" th:text="${el.email}"></p>
+
+
+            </div>
+        </div>
+        <form action="/doctor1/patientmenu" method="post">
+            <div>
+                <input type="text" name="id" aria-label="id" placeholder="id" class="form-control">
+            </div>
+            <div>
+                <input type="text" name="diagnosis" aria-label="diagnosis" placeholder="diagnosis"
+                       class="form-control">
+            </div>
+            <div> &nbsp</div>
+            <button type="submit" class="btn btn-primary"> Сохранить</button>
+        </form>
+
+        <div class="container mt-5">
+
+            <div th:insert="blocks/footer :: footer"></div>
+        </div>
     </div>
-    <form action="/doctor1/patientmenu" method="post">
-      <div>
-        <input type="text" name="id" aria-label="id" placeholder="id" class="form-control">
-      </div>
-      <div>
-        <input type="text" name="startDate" aria-label="startDate" placeholder="startDate" class="form-control">
-      </div>
-      <div>
-        <input type="text" name="diagnosis" aria-label="diagnosis" placeholder="diagnosis"
-               class="form-control">
-      </div>
-      <div>
-        <input type="text" name="finishDate" aria-label="finishDate" placeholder="finishDate"
-               class="form-control">
-      </div>
-      <div> &nbsp</div>
-      <button type="submit" class="btn btn-primary"> Сохранить</button>
-    </form>
-
-    <div class="container mt-5">
-
-      <div th:insert="blocks/footer :: footer"></div>
-    </div>
-  </div>
-  </html>
+    </html>
