--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -41,7 +41,6 @@
 
     <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
         <h1 class="display-4 fw-normal">Система №1 по автоматизации онлайн-записи</h1>
-        <p class="fs-5 text-muted">Простая CRM по управлению бизнесом, виджет онлайн-бронирования и веб-страница
-            в каталоге для самостоятельного бронирования клиентами 24/7.</p>
+        <p class="fs-5 text-muted"></p>
     </div>
 </div>
