--- a/src/main/resources/templates/cssandjs/styledPage.html
+++ b/src/main/resources/templates/cssandjs/styledPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Add CSS and JS to Thymeleaf</title>
-    <link th:href="@{/css/main.css}" rel="stylesheet" />
+    <link th:href="@{/static/css/main.css}" rel="stylesheet" />
     <script th:inline="javascript">
         var nameJs = /*[[${name}]]*/;
     </script>
