--- a/src/main/resources/templates/account-registred.html
+++ b/src/main/resources/templates/account-registred.html
@@ -3,11 +3,11 @@
 <head>
     <title> Мейн сайта</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <html lang="en">
+    <link rel="stylesheet" th:href="@{/static/css/bootstrap.css}">
 
-    <div class="container py-3">
-        <header th:insert="blocks/header :: header"></header>
+    <header th:insert="blocks/header :: header"></header>
+    <div class="p-3 bg-dark text-white">
+
         <div class="container mt-5">
             <p>АКК ЗАРЕГАНО</p>
             <div class="container mt-5">
@@ -15,6 +15,6 @@
                 <div th:insert="blocks/footer :: footer"></div>
             </div>
         </div>
-    </html>
+    </div>
 
 </html>
