--- a/src/main/resources/templates/doctor.html
+++ b/src/main/resources/templates/doctor.html
@@ -3,27 +3,37 @@
 <head>
     <title> Мейн сайта</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/static/css/bootstrap.css}">
     <html lang="en">
-    <div class="container py-3">
+    <div class="p-3 bg-dark text-white">
 
         <header th:insert="blocks/header :: header"></header>
 
-        <form action="/doctor1/patient" method="post">
+        <form action="/doctor" method="post">
             <div>
                 <input type="text" name="id" aria-label="id" placeholder="id" class="form-control">
             </div>
             <div> &nbsp</div>
-            <button type="submit" class="btn btn-primary"> найти </button>
+            <button type="submit" class="btn btn-primary"> поиск</button>
         </form>
+        <div>&nbsp;</div>
+        <form action="/doctor" method="post">
+            <div>
+                <input type="text" name="name" aria-label="name" placeholder="name" class="form-control">
+            </div>
+            <div> &nbsp</div>
+            <button type="submit" class="btn btn-primary"> поиск</button>
+        </form>
+
         <div class="container mt-5">
-            <div th:each="el: ${patient}"  class="alert alert-info mt-2"
+            <div th:each="el: ${patient}" class="alert alert-info mt-2"
                  style="align-content: center; color: #1d47a2">
                 <h3 style="text-align: center" th:text="${el.id}"></h3>
                 <p style="text-align: center" th:text="${el.fio}"></p>
             </div>
         </div>
         <div class="container mt-5">
+
 
             <div th:insert="blocks/footer :: footer"></div>
         </div>
