--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title><!DOCTYPE HTML>
-        <html xmlns:th="http://www.thymeleaf.org">
-        <head>
-        <title> Мейн сайта</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <html lang="en">
-    <div class="container py-3">
-        <header th:insert="blocks/header :: header"></header>
-        <h3>ERROR</h3>
-        <div th:insert="blocks/footer :: footer"></div>
-    </div>
-    </div>
-    </html>
 
-</html></title>
-</head>
-<body>
+<meta charset="UTF-8">
+<title> ERROR</title>
+<html xmlns:th="http://www.thymeleaf.org">
 
-</body>
+<title> Мейн сайта</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+<link rel="stylesheet" th:href="@{/static/css/bootstrap.css}">
+<div class="p-3 bg-dark text-white">
+    <header th:insert="blocks/header :: header"></header>
+    <h3>ERROR</h3>
+    <div th:insert="blocks/footer :: footer"></div>
+</div>
+</div>
+
+
 </html>
