--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,15 +3,14 @@
 <head>
     <title> Мейн сайта</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/static/css/bootstrap.css}">
     <html lang="en">
-    <div class="container py-3">
+    <div class="p-3 bg-dark text-white">
         <header th:insert="blocks/header :: header"></header>
         <div class="container mt-5">
             <div th:each="el: ${date}" sec:authorize="hasRole('ADMIN')" class="alert alert-info mt-2"
                  style="align-content: center; color: #1d47a2">
                 <h3 style="text-align: center" th:text="${el.getPatient().getFio()}"></h3>
-<!--                <h3 style="text-align: center" th:text="${el.getDoctor().getSpeciality()}"></h3>-->
                 <p style="text-align: center" th:text="${el.date}"></p>
                 <p style="text-align: center" th:text="${el.time}"></p>
 
@@ -20,9 +19,6 @@
 
         <h4><a sec:authorize="!isAuthenticated()" href="/login">Войти</a></h4>
         <h4><a sec:authorize="!isAuthenticated()" href="/registration">Зарегистрироваться</a></h4>
-        <!--            <div sec:authorize="isAuthenticated()">-->
-        <!--                This content is only shown to authenticated users.-->
-        <!--            </div>-->
         <div class="container mt-5">
 
             <div th:insert="blocks/footer :: footer"></div>
