--- a/src/main/resources/templates/news.html
+++ b/src/main/resources/templates/news.html
@@ -3,7 +3,7 @@
 <head>
   <title> Мейн сайта</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" th:href="@{/static/css/bootstrap.css}">
   <html lang="en">
   <head>
     <meta charset="utf-8">
