--- a/src/main/resources/templates/price-main.html
+++ b/src/main/resources/templates/price-main.html
@@ -3,7 +3,7 @@
 <head>
     <title th:text="${title}"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/static/css/bootstrap.css}">
     <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -51,7 +51,7 @@
         <!-- Custom styles for this template -->
         <link href="pricing.css" rel="stylesheet">
     </head>
-    <div class="container py-3">
+    <div class="p-3 bg-dark text-white">
 
         <header th:insert="blocks/header :: header"></header>
 
