--- a/src/main/resources/templates/time-reserved.html
+++ b/src/main/resources/templates/time-reserved.html
@@ -3,10 +3,10 @@
 <head>
     <title> Мейн сайта</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/static/css/bootstrap.css}">
     <html lang="en">
 
-    <div class="container py-3">
+    <div class="p-3 bg-dark text-white">
         <header th:insert="blocks/header :: header"></header>
         <div class="container mt-5">
             <p>У₴БИЩЕ ВРЕМЯ ЗАНЯТО</p>
