--- a/src/main/resources/templates/blocks/registration.html
+++ b/src/main/resources/templates/blocks/registration.html
@@ -16,7 +16,7 @@
                        placeholder="Confirm your password"
                        class="form-control">
             </div>
-            <button type="submit" class="btn btn-warning">Зарегистрироваться</button>
+            <button type="submit" class="btn btn-warning" style="width: 100%">Зарегистрироваться</button>
 
         </form>
     </main>
