--- a/src/main/resources/templates/blocks/login.html
+++ b/src/main/resources/templates/blocks/login.html
@@ -24,7 +24,7 @@
                     <input type="checkbox" value="remember-me"> Remember me
                 </label>
             </div>
-            <button class="btn btn-warning" type="submit">Sign in</button>
+            <button class="btn btn-warning" type="submit" style="width: 100%">Sign in</button>
             <p class="mt-5 mb-3 text-muted">&copy; 2022</p>
         </form>
 
