--- a/src/main/resources/templates/doctor/patientmenu.html
+++ b/src/main/resources/templates/doctor/patientmenu.html
@@ -12,14 +12,14 @@
             <div th:each="el: ${patient}" sec:authorize="hasRole('DOCTOR')" class="alert alert-info mt-2"
                  style="align-content: center; color: white">
 
-                <h6 style="text-align: center">ID</h6> <h5 style="text-align: center" th:text="${el.getId()}"></h5>
-                <h6 style="text-align: center">ФИО</h6> <h5 style="text-align: center" th:text="${el.getFio()}"></h5>
-                <h6 style="text-align: center">___________________________________</h6>
-                <h6 style="text-align: center">ПОЛ</h6> <h5 style="text-align: center" th:text="${el.getSex()}"></h5>
-                <h6 style="text-align: center">Дата рождения</h6> <h5 style="text-align: center" th:text="${el.getBirthday()}"></h5>
-                <h6 style="text-align: center">Место проживания</h6> <h5 style="text-align: center" th:text="${el.getPlaceOfResidence()}"></h5>
-                <h6 style="text-align: center">Страховой полис </h6><h5 style="text-align: center" th:text="${el.getInsurancePolicy()}"></h5>
-                <h6 style="text-align: center">Email</h6> <h5 style="text-align: center" th:text="${el.getEmail()}"></h5>
+                <h5 style="text-align: center" th:text="${el.getId()}"></h5>
+                <h5 style="text-align: center" th:text="${el.getFio()}"></h5>
+
+                <h5 style="text-align: center" th:text="${el.getSex()}"></h5>
+                <h5 style="text-align: center" th:text="${el.getBirthday()}"></h5>
+                <h5 style="text-align: center" th:text="${el.getPlaceOfResidence()}"></h5>
+                <h5 style="text-align: center" th:text="${el.getInsurancePolicy()}"></h5>
+                <h5 style="text-align: center" th:text="${el.getEmail()}"></h5>
 
             </div>
         </div>
