--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,31 +1,23 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="auth">
-<head>
-    <title> Мейн сайта</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" th:href="@{/static/css/bootstrap.css}">
-    <html lang="en">
-    <div class="p-3 bg-dark text-white">
 
-        <header th:insert="blocks/header :: header"></header>
-        <div class="container mt-5">
-            <h4><a sec:authorize="!isAuthenticated()" href="/login">Войти</a></h4>
-            <h4><a sec:authorize="!isAuthenticated()" href="/registration">Зарегистрироваться</a></h4>
-            <div th:each="el: ${date}" sec:authorize="hasRole('ADMIN')" class="alert alert-info mt-2"
-                 style="align-content: center; color: #1d47a2">
-                <h3 style="text-align: center" th:text="${el.getPatient().getFio()}"></h3>
-                <p style="text-align: center" th:text="${el.date}"></p>
-                <p style="text-align: center" th:text="${el.time}"></p>
+<title> Home </title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+<link rel="stylesheet" th:href="@{/static/css/bootstrap.css}">
+<div class="p-3 bg-dark text-white">
 
-            </div>
+    <header th:insert="blocks/header :: header"></header>
+    <div class="container mt-5">
+        <h4><a sec:authorize="!isAuthenticated()" href="/login">Войти</a></h4>
+        <h4><a sec:authorize="!isAuthenticated()" href="/registration">Зарегистрироваться</a></h4>
+        <div th:each="el: ${date}" sec:authorize="hasRole('ADMIN')" class="alert alert-info mt-2"
+             style="align-content: center; color: #1d47a2">
+            <h3 style="text-align: center" th:text="${el.getPatient().getFio()}"></h3>
+            <p style="text-align: center" th:text="${el.date}"></p>
+            <p style="text-align: center" th:text="${el.time}"></p>
         </div>
-
-
-        <div class="container mt-5">
-
-            <div th:insert="blocks/footer :: footer"></div>
-        </div>
+        <div th:insert="blocks/footer :: footer"></div>
     </div>
-    </html>
+</div>
 
 </html>
